# codecanvas

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: generate_examples.py
src/codecanvas/: __init__.py  cli.py  parser.py  svg_gen.py
